--- a/css/style.css
+++ b/css/style.css
@@ -764,6 +764,15 @@ ul.portfolio li {
 	display: none;
 	opacity: 0;
 }
+
+ul.portfolio li  {
+	width: 25%;
+	float: left;
+	cursor: pointer;
+	display: none;
+	opacity: 0;
+}
+
 .portfolioitem {
 	display: block;
 	padding-bottom: 85px;
@@ -772,6 +781,22 @@ ul.portfolio li {
 .portfolioitem img {
 	width: 100%;
 	vertical-align: middle;
+}
+
+.portfolioitem_2 {
+	display: block;
+	padding-bottom: 85px;
+	position: relative;
+}
+
+.portfolioitem_2 span{
+	display: block;
+	max-height: 300px;
+	height: 200px;
+	width: 100%;
+	background-position: center;
+	background-size: contain;
+	background-repeat: no-repeat;
 }
 .portfoliohover {
 	-webkit-transition: background-color 600ms ease;
@@ -976,3 +1001,43 @@ textarea {
 }
 
 
+
+/******************************************************************
+	RESET
+******************************************************************/
+.progress-box .progress {
+	box-shadow: none;
+	height: 3px;
+}
+
+.progress-box .progress-bar {
+	transition-duration: 2000ms;
+	transition-property: all;
+	transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+}
+
+.container img {
+	width: 30%;
+	height: 100%;
+	object-fit:cover;
+	-webkit-box-reflect:below 2px linear-gradient(transparent, transparent, #0004);
+	transform-origin:center;
+	transform:perspective(800px) rotateY(25deg);
+	transition:0.5s;
+}
+.container {
+	max-width:600px;
+	max-height:350px;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	gap:20px;
+
+}
+.container:hover img {
+	opacity:0.3;
+}
+.container img:hover {
+	transform:perspective(800px)       rotateY(0deg);
+	opacity:1;
+}
